; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/json/extr_jsmn.c_jsmn_parse_primitive.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/json/extr_jsmn.c_jsmn_parse_primitive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32 }
%struct.TYPE_9__ = type { i32 }

@JSMN_ERROR_INVAL = common dso_local global i32 0, align 4
@JSMN_ERROR_NOMEM = common dso_local global i32 0, align 4
@JSMN_PRIMITIVE = common dso_local global i32 0, align 4
@JSMN_ERROR_PART = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_10__*, i8*, i64, %struct.TYPE_9__*, i64)* @jsmn_parse_primitive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jsmn_parse_primitive(%struct.TYPE_10__* %0, i8* %1, i64 %2, %struct.TYPE_9__* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_10__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.TYPE_9__*, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_9__*, align 8
  %13 = alloca i32, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %7, align 8
  store i8* %1, i8** %8, align 8
  store i64 %2, i64* %9, align 8
  store %struct.TYPE_9__* %3, %struct.TYPE_9__** %10, align 8
  store i64 %4, i64* %11, align 8
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %13, align 4
  br label %17

17:                                               ; preds = %72, %5
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = sext i32 %20 to i64
  %22 = load i64, i64* %9, align 8
  %23 = icmp ult i64 %21, %22
  br i1 %23, label %24, label %34

24:                                               ; preds = %17
  %25 = load i8*, i8** %8, align 8
  %26 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i8, i8* %25, i64 %29
  %31 = load i8, i8* %30, align 1
  %32 = sext i8 %31 to i32
  %33 = icmp ne i32 %32, 0
  br label %34

34:                                               ; preds = %24, %17
  %35 = phi i1 [ false, %17 ], [ %33, %24 ]
  br i1 %35, label %36, label %77

36:                                               ; preds = %34
  %37 = load i8*, i8** %8, align 8
  %38 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %39 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i8, i8* %37, i64 %41
  %43 = load i8, i8* %42, align 1
  %44 = sext i8 %43 to i32
  switch i32 %44, label %46 [
    i32 58, label %45
    i32 9, label %45
    i32 13, label %45
    i32 10, label %45
    i32 32, label %45
    i32 44, label %45
    i32 93, label %45
    i32 125, label %45
  ]

45:                                               ; preds = %36, %36, %36, %36, %36, %36, %36, %36
  br label %78

46:                                               ; preds = %36
  %47 = load i8*, i8** %8, align 8
  %48 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %49 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds i8, i8* %47, i64 %51
  %53 = load i8, i8* %52, align 1
  %54 = sext i8 %53 to i32
  %55 = icmp slt i32 %54, 32
  br i1 %55, label %66, label %56

56:                                               ; preds = %46
  %57 = load i8*, i8** %8, align 8
  %58 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %59 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = sext i32 %60 to i64
  %62 = getelementptr inbounds i8, i8* %57, i64 %61
  %63 = load i8, i8* %62, align 1
  %64 = sext i8 %63 to i32
  %65 = icmp sge i32 %64, 127
  br i1 %65, label %66, label %71

66:                                               ; preds = %56, %46
  %67 = load i32, i32* %13, align 4
  %68 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %69 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %68, i32 0, i32 0
  store i32 %67, i32* %69, align 4
  %70 = load i32, i32* @JSMN_ERROR_INVAL, align 4
  store i32 %70, i32* %6, align 4
  br label %110

71:                                               ; preds = %56
  br label %72

72:                                               ; preds = %71
  %73 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %74 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %73, i32 0, i32 0
  %75 = load i32, i32* %74, align 4
  %76 = add nsw i32 %75, 1
  store i32 %76, i32* %74, align 4
  br label %17

77:                                               ; preds = %34
  br label %78

78:                                               ; preds = %77, %45
  %79 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %80 = icmp eq %struct.TYPE_9__* %79, null
  br i1 %80, label %81, label %86

81:                                               ; preds = %78
  %82 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %83 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %82, i32 0, i32 0
  %84 = load i32, i32* %83, align 4
  %85 = add nsw i32 %84, -1
  store i32 %85, i32* %83, align 4
  store i32 0, i32* %6, align 4
  br label %110

86:                                               ; preds = %78
  %87 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %88 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %89 = load i64, i64* %11, align 8
  %90 = call %struct.TYPE_9__* @jsmn_alloc_token(%struct.TYPE_10__* %87, %struct.TYPE_9__* %88, i64 %89)
  store %struct.TYPE_9__* %90, %struct.TYPE_9__** %12, align 8
  %91 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %92 = icmp eq %struct.TYPE_9__* %91, null
  br i1 %92, label %93, label %98

93:                                               ; preds = %86
  %94 = load i32, i32* %13, align 4
  %95 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %96 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %95, i32 0, i32 0
  store i32 %94, i32* %96, align 4
  %97 = load i32, i32* @JSMN_ERROR_NOMEM, align 4
  store i32 %97, i32* %6, align 4
  br label %110

98:                                               ; preds = %86
  %99 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %100 = load i32, i32* @JSMN_PRIMITIVE, align 4
  %101 = load i32, i32* %13, align 4
  %102 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %103 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %102, i32 0, i32 0
  %104 = load i32, i32* %103, align 4
  %105 = call i32 @jsmn_fill_token(%struct.TYPE_9__* %99, i32 %100, i32 %101, i32 %104)
  %106 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %107 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %106, i32 0, i32 0
  %108 = load i32, i32* %107, align 4
  %109 = add nsw i32 %108, -1
  store i32 %109, i32* %107, align 4
  store i32 0, i32* %6, align 4
  br label %110

110:                                              ; preds = %98, %93, %81, %66
  %111 = load i32, i32* %6, align 4
  ret i32 %111
}

declare dso_local %struct.TYPE_9__* @jsmn_alloc_token(%struct.TYPE_10__*, %struct.TYPE_9__*, i64) #1

declare dso_local i32 @jsmn_fill_token(%struct.TYPE_9__*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
